[package]
    name = "client"
    version = "0.1.0"
    authors = ["F5XS <f5xs.0000a@gmail.com>"]
    edition = "2018"

[dependencies]
    itertools = "*"
    parking_lot = "*"
    lazy_static = "*"

    fnv = "*"
    chrono = "*"

    tokio-threadpool = "*"
    sekibanki = { git = "https://github.com/f5xs-0000a/sekibanki.git" }

    cgmath = "*"
    camera_controllers = "*"
    viewport = { git = "https://github.com/f5xs-0000a/viewport.git" }

    piston = "*"
    gfx = "0.17.1" # align with piston_window's version
    gfx_device_gl = "0.15.5" # align with piston_window's version
    shader_version = "*"
    piston_window = "*"
    image = "*"
